--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "src/server.ts",
 	"repository": {
 		"type": "git",
-		"url": "git@github2.com:AmaliTech-Training-Rw/storefront-rw-backend.git"
+		"url": "git@github.com:AmaliTech-Training-Rw/storefront-rw-backend.git"
 	},
 	"author": "",
 	"license": "ISC",
@@ -84,5 +84,4 @@
 		"tslint": "^6.1.3",
 		"typescript": "^5.2.2"
 	}
-
 }
