--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"dev": "nodemon",
 		"ts:dev": "ts-node-dev --respawn --rs --watch src src/server.ts",
 		"start": "node build/server.js",
-		"build": "tsc",
+		"build": "tsc && npm run copy-files",
+    	"copy-files": "cp -r ./src/utils/files/* ./build/utils/helpers",
 		"clean": "rimraf build",
 		"prebuild": "yarn clean",
 		"db:migrate": "sequelize db:migrate",
@@ -76,6 +77,7 @@
 		"jest": "^29.7.0",
 		"lint-staged": "^14.0.1",
 		"nodemon": "^3.0.1",
+		"npm-run-all": "^4.1.5",
 		"prettier": "3.0.3",
 		"sequelize-cli": "^6.6.1",
 		"supertest": "^6.3.3",
