--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
 		"build": "tsc && npm run copy-files",
 		"copy-files": "cp -r ./src/utils/helpers/* ./build/utils/helpers/",
 		"clean": "rimraf build",
-		"prebuild": "yarn clean",
+		"prebuild": "npm run clean",
 		"db:migrate": "sequelize db:migrate",
-		"db:seed": "sequelize db:seed:all",
+		"db:seed": "npm run extractFile && sequelize db:seed:all",
 		"db:unseed": "sequelize db:seed:undo:all",
 		"db:migrate:undo": "sequelize db:migrate:undo:all",
 		"db:reset": "npm run db:migrate:undo && npm run db:migrate && npm run db:seed",
@@ -34,7 +34,8 @@
 		"lint:fix": "eslint --fix --ext .ts",
 		"test": "PORT=3021 jest --runInBand --",
 		"test:watch": "jest --runInBand --watchAll",
-		"db:make_migration": " sequelize migration:generate --name"
+		"db:make_migration": " sequelize migration:generate --name",
+		"extractFile": "node  src/utils/helpers/fileExtractor.js"
 	},
 	"dependencies": {
 		"@types/body-parser": "^1.19.3",
@@ -54,6 +55,7 @@
 		"pg-hstore": "^2.3.4",
 		"sequelize": "^6.33.0",
 		"swagger-ui-express": "^5.0.0",
+		"unzipper": "^0.10.14",
 		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
@@ -66,6 +68,7 @@
 		"@types/morgan": "^1.9.6",
 		"@types/supertest": "^2.0.16",
 		"@types/swagger-ui-express": "^4.1.4",
+		"@types/unzipper": "^0",
 		"@types/uuid": "^9.0.6",
 		"@typescript-eslint/eslint-plugin": "^6.7.4",
 		"@typescript-eslint/parser": "^6.7.3",
